manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-web
  name: app-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-web
  strategy: {}
  template:
    metadata:
      labels:
        app: app-web
    spec:
      containers:
        - image: ghcr.io/openlab-aux/openlab-app:latest
          name: app-web
status: {}
