manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-web
  name: app-web
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app-web
  type: ClusterIP
status:
  loadBalancer: {}
