manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: app-web
  annotations:
    cert-manager.io/cluster-issuer: le-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.openlab-augsburg.de
      secretName: app-web
  rules:
    - host: app.openlab-augsburg.de
      http:
        paths:
          - backend:
              service:
                name: app-web
                port:
                  number: 80
            path: /
            pathType: Prefix

status:
  loadBalancer: {}
